player class simplified