@@ -10,6 +10,7 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Entity
@@ -37,7 +38,6 @@ public class Player implements UserDetails {
     private int experience = 0;
     private int currentStage = 1;
     private int health = 100;
-
     private int gold = 0;
     private int diamond = 0;
 
@@ -46,22 +46,19 @@ public class Player implements UserDetails {
     private List<Item> inventory = new ArrayList<>();
 
     @OneToMany(mappedBy = "player", cascade = CascadeType.ALL, orphanRemoval = true)
-    private List<Skill> skills = new ArrayList<>();
-
-
+    private List<Skill> equippedSkills = new ArrayList<>();
 
     @OneToMany(cascade = CascadeType.ALL, orphanRemoval = true)
     private List<Skill> purchasedSkills = new ArrayList<>();
 
+    @OneToOne(cascade = CascadeType.ALL)
+    private Item equippedCharacterSkin;
 
     @OneToOne(cascade = CascadeType.ALL)
-    private Item equippedCharacterSkin; // 캐릭터 스킨
+    private Item equippedSkillSkin;
 
     @OneToOne(cascade = CascadeType.ALL)
-    private Item equippedSkillSkin; // 스킬 스킨
-
-    @OneToOne(cascade = CascadeType.ALL)
-    private Item equippedEnemySkin; // 적 스킨
+    private Item equippedEnemySkin;
 
     public Player(String username, String phoneNumber) {
         if (username == null || username.isEmpty()) {
@@ -88,28 +85,34 @@ public class Player implements UserDetails {
         this.securityAnswer = securityAnswer;
     }
 
-    public void addGold(int amount) {
-        this.gold += amount;
+    public void updateLevel(int level) {
+        this.level = level;
     }
 
-    public void subtractGold(int amount) {
-        if (this.gold < amount) {
-            throw new IllegalArgumentException("Not enough gold");
-        }
-        this.gold -= amount;
+    public void updateExperience(int experience) {
+        this.experience = experience;
     }
 
-    public void addDiamond(int amount) {
-        this.diamond += amount;
+    public void updateCurrentStage(int currentStage) {
+        this.currentStage = currentStage;
     }
 
-    public void subtractDiamond(int amount) {
-        if (this.diamond < amount) {
-            throw new IllegalArgumentException("Not enough diamonds");
-        }
-        this.diamond -= amount;
+    public void updateHealth(int health) {
+        this.health = health;
     }
 
+    public void updateGold(int gold) {
+        this.gold = gold;
+    }
+
+    public void updateDiamond(int diamond) {
+        this.diamond = diamond;
+    }
+
+    public void equipDefaultSkills(List<Skill> defaultSkills) {
+        this.equippedSkills.clear();
+        this.equippedSkills.addAll(defaultSkills);
+    }
 
     public void addItemToInventory(Item item) {
         this.inventory.add(item);
@@ -119,69 +122,9 @@ public class Player implements UserDetails {
         this.purchasedSkills.add(skill);
     }
 
-
-
-    public void resetPlayerData() {
-        this.level = 1;
-        this.experience = 0;
-        this.currentStage = 1;
-        this.health = 100;
-        this.gold = 0;
-        this.diamond = 0;
-        this.inventory.clear();
-        this.purchasedSkills.clear();
-        if (this.skills != null) {
-            this.skills.clear();
-        }
-    }
-
-    public void equipCharacterSkin(Item item) {
-        if (!inventory.contains(item)) {
-            throw new IllegalArgumentException("Item is not in the player's inventory.");
-        }
-        this.equippedCharacterSkin = item;
-    }
-
-    public void equipSkillSkin(Item item) {
-        if (!inventory.contains(item)) {
-            throw new IllegalArgumentException("Item is not in the player's inventory.");
-        }
-        this.equippedSkillSkin = item;
-    }
-
-    public void equipEnemySkin(Item item) {
-        if (!inventory.contains(item)) {
-            throw new IllegalArgumentException("Item is not in the player's inventory.");
-        }
-        this.equippedEnemySkin = item;
-    }
-
-    public void saveSkins(Item characterSkin, Item skillSkin, Item enemySkin) {
-        equipCharacterSkin(characterSkin);
-        equipSkillSkin(skillSkin);
-        equipEnemySkin(enemySkin);
-    }
-
-    public List<Item> getOwnedItems() {
-        return this.inventory;
-    }
-
-
-
-
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of();
-    }
-
-    @Override
-    public String getPassword() {
-        return this.password;
-    }
-
-    @Override
-    public String getUsername() {
-        return this.username;
+        return Collections.emptyList();
     }
 
     @Override
@@ -203,18 +146,4 @@ public class Player implements UserDetails {
     public boolean isEnabled() {
         return true;
     }
-
-
-
-    public void updateStageProgress(int level, int additionalExperience, int newStage) {
-        if (level <= 0 || additionalExperience < 0 || newStage <= 0) {
-            throw new IllegalArgumentException("Invalid stage progress data");
-        }
-        this.level = level;
-        this.experience += additionalExperience;
-        this.currentStage = newStage;
-    }
-
-
-
 }
